# ClinicalTrialOptimizationAquora

./: AI_CTO.py  CTO_Beta.py  CTO_Toy.py  CTO_test.py  CTO_test2.py  ClinicalTrialOptimization.html  ClinicalTrialOptimization.ipynb  pbc.csv
ingenii-clinical-trial/: .gitignore  pyproject.toml
ingenii-clinical-trial/submission/: solution.ipynb
